# contextswitch

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile.toml  README.md
.github/actions/cargo-tarpaulin-action/: action.yml  cargo-tarpaulin.sh
.github/workflows/: ci.yml
api/: Cargo.toml
api/config/: default.toml
api/src/: configuration.rs  lib.rs  main.rs
api/src/contextswitch/: api.rs  mod.rs  taskwarrior.rs
api/src/routes/: tasks.rs
api/tests/api/: helpers.rs  tasks.rs
config/: default.toml  test.toml
src/: configuration.rs  contextswitch.rs  lib.rs  main.rs  observability.rs  taskwarrior.rs
src/contextswitch/: api.rs  taskwarrior.rs
src/routes/: tasks.rs
tests/: health_check.rs  task.rs  test_helper.rs
tests/api/: health_check.rs  helpers.rs  main.rs  task.rs  tasks.rs
web/: Cargo.toml  index.html
web/src/: lib.rs  main.rs
web/src/components/: mod.rs  task.rs  tasks_list.rs
