[package]
name = "contextswitch-api"
version = "0.1.0"
edition = "2021"
authors = ["David Rousselie <david@rousselie.name>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "contextswitch-api"

[dependencies]
contextswitch-types = { path = "../types" }
actix-web = "=4.0.0-beta.18"
actix-http = "=3.0.0-beta.17"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.0", features = ["serde"] }
chrono = { version = "0.4.0", features = ["serde"] }
mktemp = "0.4.0"
configparser = "3.0.0"
env_logger = "0.9.0"
dotenv = "0.15.0"
listenfd = "0.3.0"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11.6"
tokio = "1"
