[package]
name = "contextswitch-web"
version = "0.1.0"
edition = "2021"
authors = ["David Rousselie <david@rousselie.name>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "contextswitch-web"

[dependencies]
contextswitch = { path = ".." }
yew = "0.19"
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
uikit-rs = { git = "https://github.com/dax/uikit-rs.git" }
